[gd_scene load_steps=15 format=3 uid="uid://ximeayqp0acg"]

[ext_resource type="Script" uid="uid://v8yuvv247t1q" path="res://src/scripts/menus/multiplayer_menu.gd" id="1_2fb8j"]
[ext_resource type="Theme" uid="uid://ch3x2byuiyaxy" path="res://src/assets/themes/menu.tres" id="2_82we7"]
[ext_resource type="Texture2D" uid="uid://h5nmdd2tq5yt" path="res://src/assets/sprites/Person.png" id="3_otncy"]
[ext_resource type="Texture2D" uid="uid://cejxfhqi5mryk" path="res://src/assets/sprites/People.png" id="4_fj2ah"]
[ext_resource type="Theme" uid="uid://drabaa7jfibga" path="res://src/assets/themes/small_button.tres" id="5_ve5k3"]
[ext_resource type="Texture2D" uid="uid://iqimikjyunwk" path="res://src/assets/sprites/Home.png" id="6_kq3tp"]
[ext_resource type="Script" uid="uid://bx70dau1vkpss" path="res://src/scripts/multiplayer/server_browser.gd" id="7_okjt7"]
[ext_resource type="PackedScene" uid="uid://bjd0ts18rh4pc" path="res://src/scenes/multiplayer/server_info.tscn" id="8_8hig0"]
[ext_resource type="FontFile" uid="uid://bhggoau4c0xk0" path="res://src/assets/fonts/Silver.ttf" id="9_pvauv"]
[ext_resource type="Texture2D" uid="uid://c4ucb36ohohp3" path="res://src/assets/sprites/Left-Arrow.png" id="9_v1nsv"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_edoox"]
bg_color = Color(0, 0, 0, 0.631373)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kv4yq"]
bg_color = Color(0.286275, 0.113725, 0, 0.611765)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1s8xr"]
bg_color = Color(0.286275, 0.113725, 0, 0.611765)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_kv4yq"]

[node name="Multiplayer-menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 3.0
offset_top = 1.0
offset_right = -4.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2fb8j")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -121.0
offset_top = -95.0
offset_right = 1274.0
offset_bottom = 746.0
color = Color(0.300004, 0.0741538, 0, 0.356863)

[node name="HBoxContainer" type="HBoxContainer" parent="."]
texture_filter = 3
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -287.0
offset_top = -124.5
offset_right = 287.0
offset_bottom = 124.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_82we7")
theme_override_constants/separation = 50

[node name="HostButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "I'm a teacher!
(Create a room)"
icon = ExtResource("3_otncy")
icon_alignment = 1
vertical_icon_alignment = 0

[node name="JoinButton" type="Button" parent="HBoxContainer"]
texture_filter = 3
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_82we7")
text = "I'm a student!
(Join a room)"
icon = ExtResource("4_fj2ah")
icon_alignment = 1
vertical_icon_alignment = 0

[node name="BackButton" type="Button" parent="."]
texture_filter = 3
layout_mode = 1
anchors_preset = -1
anchor_left = 0.036
anchor_top = 0.059
anchor_right = 0.036
anchor_bottom = 0.059
offset_left = -16.22
offset_top = -16.232
offset_right = 131.78
offset_bottom = 131.768
scale = Vector2(0.221184, 0.221184)
theme = ExtResource("5_ve5k3")
icon = ExtResource("6_kq3tp")
icon_alignment = 1

[node name="ServerBrowser" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_left = -17.0
offset_right = 1127.0
offset_bottom = 644.0
script = ExtResource("7_okjt7")
serverInfo = ExtResource("8_8hig0")

[node name="BroadcastTimer" type="Timer" parent="ServerBrowser"]

[node name="Panel2" type="Panel" parent="ServerBrowser"]
layout_mode = 0
offset_left = -52.0
offset_top = -54.0
offset_right = 1238.0
offset_bottom = 672.0
theme_override_styles/panel = SubResource("StyleBoxFlat_edoox")

[node name="Panel" type="Panel" parent="ServerBrowser"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -378.0
offset_top = -239.0
offset_right = 410.0
offset_bottom = 240.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_kv4yq")
metadata/_edit_group_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="ServerBrowser/Panel"]
layout_mode = 0
offset_left = 6.0
offset_top = 7.0
offset_right = 779.0
offset_bottom = 471.0

[node name="ServerInfoTitle" type="HBoxContainer" parent="ServerBrowser/Panel/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_82we7")

[node name="ServerNameTitleLabel" type="Label" parent="ServerBrowser/Panel/VBoxContainer/ServerInfoTitle"]
texture_filter = 3
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 25
text = "Name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="IPTitleLabel" type="Label" parent="ServerBrowser/Panel/VBoxContainer/ServerInfoTitle"]
texture_filter = 3
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 25
text = "IP"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayerCountTitleLabel" type="Label" parent="ServerBrowser/Panel/VBoxContainer/ServerInfoTitle"]
texture_filter = 3
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 25
text = "Player Count"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayerCountTitleLabel2" type="Label" parent="ServerBrowser/Panel/VBoxContainer/ServerInfoTitle"]
texture_filter = 3
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 25
text = "Join"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="ServerBrowser/Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="ServerBrowser/Panel/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PlayerBrowser" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_left = 195.0
offset_top = 107.0
offset_right = 954.0
offset_bottom = 539.0

[node name="Panel2" type="Panel" parent="PlayerBrowser"]
layout_mode = 0
offset_left = -252.0
offset_top = -142.0
offset_right = 1038.0
offset_bottom = 584.0
theme_override_styles/panel = SubResource("StyleBoxFlat_edoox")

[node name="Panel" type="Panel" parent="PlayerBrowser"]
layout_mode = 0
offset_left = -16.0
offset_top = -21.0
offset_right = 771.0
offset_bottom = 455.0
theme_override_styles/panel = SubResource("StyleBoxFlat_1s8xr")

[node name="VBoxContainer" type="VBoxContainer" parent="PlayerBrowser/Panel"]
layout_mode = 0
offset_left = 6.0
offset_top = 7.0
offset_right = 781.0
offset_bottom = 470.0

[node name="ServerInfoTitle" type="HBoxContainer" parent="PlayerBrowser/Panel/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_82we7")

[node name="ServerNameTitleLabel" type="Label" parent="PlayerBrowser/Panel/VBoxContainer/ServerInfoTitle"]
texture_filter = 3
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 25
text = "Players in the room"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="PlayerBrowser/Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="PlayerBrowser/Panel/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="StartButton" type="Button" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.882
anchor_top = 0.9
anchor_right = 0.882
anchor_bottom = 0.9
offset_left = -512.064
offset_top = -10.2
offset_right = -365.064
offset_bottom = 28.8
theme = ExtResource("2_82we7")
text = "Start game"

[node name="NameInputContainer" type="HBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.062
anchor_right = 0.5
anchor_bottom = 0.062
offset_left = -204.5
offset_top = -20.176
offset_right = 202.5
offset_bottom = 24.824
theme = ExtResource("2_82we7")
alignment = 1

[node name="NameLabel" type="Label" parent="NameInputContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Name:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NameLineEdit" type="LineEdit" parent="NameInputContainer"]
texture_filter = 3
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("9_pvauv")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_kv4yq")
placeholder_text = "Insert your name..."

[node name="HostButton" type="Button" parent="NameInputContainer"]
visible = false
texture_filter = 3
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Host room"

[node name="CloseButton" type="Button" parent="."]
visible = false
texture_filter = 3
layout_mode = 1
anchors_preset = -1
anchor_left = 0.176
anchor_top = 0.065
anchor_right = 0.176
anchor_bottom = 0.065
offset_left = -16.52
offset_top = -16.12
offset_right = 131.48
offset_bottom = 131.88
scale = Vector2(0.221184, 0.221184)
theme = ExtResource("5_ve5k3")
icon = ExtResource("9_v1nsv")
icon_alignment = 1

[node name="DebugAddPlayersButton" type="Button" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.924
anchor_top = 0.5
anchor_right = 0.924
anchor_bottom = 0.5
offset_left = -56.448
offset_top = -27.0
offset_right = 54.552
offset_bottom = 27.0
grow_horizontal = 0
grow_vertical = 2
text = "[DEBUG]
Add players"

[node name="Window" type="Window" parent="."]
title = "Error"
initial_position = 1
size = Vector2i(350, 100)
visible = false
unresizable = true
popup_window = true

[node name="HBoxContainer" type="HBoxContainer" parent="Window"]
offset_right = 399.0
offset_bottom = 110.0
scale = Vector2(0.88, 0.92)
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 50
alignment = 1

[node name="Warning" type="Label" parent="Window/HBoxContainer"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.425788, 0.357085, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 70
text = "!"

[node name="WindowLabel" type="Label" parent="Window/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 15
text = "Generic error message"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="HBoxContainer/HostButton" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="HBoxContainer/JoinButton" to="." method="_on_join_button_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
[connection signal="timeout" from="ServerBrowser/BroadcastTimer" to="ServerBrowser" method="_on_broadcast_timer_timeout"]
[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="NameInputContainer/HostButton" to="." method="_on_create_room_button_pressed"]
[connection signal="pressed" from="CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="pressed" from="DebugAddPlayersButton" to="." method="_on_debug_add_players_button_pressed"]
[connection signal="close_requested" from="Window" to="." method="_on_window_close_requested"]
